--- a/Home.xaml
+++ b/Home.xaml
@@ -6,8 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Controls="clr-namespace:Cloudsdale.Controls" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Segoe WP Bold"
     FontSize="28"
     Foreground="Black"
@@ -41,51 +40,9 @@
                         <ItemsControl x:Name="CloudList" />
                     </ScrollViewer>
                     <Button VerticalAlignment="Bottom" BorderBrush="Transparent" Margin="0,0,0,2" 
-                            Height="50" Padding="-25" Width="50" >
+                            Height="50" Padding="-25" Width="50"
+                            Style="{StaticResource XTiltButtonStyle}">
                         <Image Source="/Images/Icons/refresh.png" Width="50" Height="50" />
-                        <Button.Style>
-                            <Style TargetType="ButtonBase">
-                                <Setter Property="Background" Value="Transparent"/>
-                                <Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
-                                <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
-                                <Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
-                                <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
-                                <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
-                                <Setter Property="Padding" Value="10,3,10,5"/>
-
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="ButtonBase">
-                                            <Grid Background="Transparent">
-                                                <VisualStateManager.VisualStateGroups>
-                                                    <VisualStateGroup x:Name="CommonStates">
-                                                        <VisualState x:Name="Normal"/>
-                                                        <VisualState x:Name="MouseOver"/>
-                                                        <VisualState x:Name="Disabled"/>
-
-                                                        <!-- the following visual state describes the behaviour you are observing -->
-                                                        <VisualState x:Name="Pressed">
-                                                            <Storyboard>
-                                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentContainer" Storyboard.TargetProperty="Projection">
-                                                                    <DiscreteObjectKeyFrame KeyTime="0">
-                                                                        <DiscreteObjectKeyFrame.Value>
-                                                                            <PlaneProjection RotationX="30" CenterOfRotationX="-0.2" />
-                                                                        </DiscreteObjectKeyFrame.Value>
-                                                                    </DiscreteObjectKeyFrame>
-                                                                </ObjectAnimationUsingKeyFrames>
-                                                            </Storyboard>
-                                                        </VisualState>
-                                                    </VisualStateGroup>
-                                                </VisualStateManager.VisualStateGroups>
-                                                <Border x:Name="ButtonBackground" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="0" Background="{TemplateBinding Background}" Margin="{StaticResource PhoneTouchTargetOverhang}" >
-                                                    <ContentControl x:Name="ContentContainer" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Padding="{TemplateBinding Padding}" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
-                                                </Border>
-                                            </Grid>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </Button.Style>
                     </Button>
                 </Grid>
             </controls:PivotItem>
@@ -101,51 +58,9 @@
                         </Grid.Background>
                         <TextBox VerticalAlignment="Top" Margin="0,0,75,0" />
                         <Button VerticalAlignment="Top" HorizontalAlignment="Right" 
-                                BorderBrush="Transparent" Margin="0,-9">
+                                BorderBrush="Transparent" Margin="0,-9"
+                                Style="{StaticResource XTiltButtonStyle}">
                             <Image Source="/Images/Icons/search.png" Width="50" />
-                            <Button.Style>
-                                <Style TargetType="ButtonBase">
-                                    <Setter Property="Background" Value="Transparent"/>
-                                    <Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
-                                    <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
-                                    <Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
-                                    <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
-                                    <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
-                                    <Setter Property="Padding" Value="10,3,10,5"/>
-
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate TargetType="ButtonBase">
-                                                <Grid Background="Transparent">
-                                                    <VisualStateManager.VisualStateGroups>
-                                                        <VisualStateGroup x:Name="CommonStates">
-                                                            <VisualState x:Name="Normal"/>
-                                                            <VisualState x:Name="MouseOver"/>
-                                                            <VisualState x:Name="Disabled"/>
-
-                                                            <!-- the following visual state describes the behaviour you are observing -->
-                                                            <VisualState x:Name="Pressed">
-                                                                <Storyboard>
-                                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentContainer" Storyboard.TargetProperty="Projection">
-                                                                        <DiscreteObjectKeyFrame KeyTime="0">
-                                                                            <DiscreteObjectKeyFrame.Value>
-                                                                                <PlaneProjection RotationX="30" CenterOfRotationX="-0.2" />
-                                                                            </DiscreteObjectKeyFrame.Value>
-                                                                        </DiscreteObjectKeyFrame>
-                                                                    </ObjectAnimationUsingKeyFrames>
-                                                                </Storyboard>
-                                                            </VisualState>
-                                                        </VisualStateGroup>
-                                                    </VisualStateManager.VisualStateGroups>
-                                                    <Border x:Name="ButtonBackground" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="0" Background="{TemplateBinding Background}" Margin="{StaticResource PhoneTouchTargetOverhang}" >
-                                                        <ContentControl x:Name="ContentContainer" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Padding="{TemplateBinding Padding}" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
-                                                    </Border>
-                                                </Grid>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </Button.Style>
                         </Button>
                     </Grid>
                     <ScrollViewer Margin="0,50,0,50">
@@ -154,51 +69,9 @@
                         </ItemsControl>
                     </ScrollViewer>
                     <Button VerticalAlignment="Bottom" BorderBrush="Transparent" Margin="0,0,0,2" 
-                            Height="50" Padding="-25" Width="50" Click="ExploreRefreshClick" >
+                            Height="50" Padding="-25" Width="50" Click="ExploreRefreshClick"
+                            Style="{StaticResource XTiltButtonStyle}">
                         <Image Source="/Images/Icons/refresh.png" Width="50" Height="50" />
-                        <Button.Style>
-                            <Style TargetType="ButtonBase">
-                                <Setter Property="Background" Value="Transparent"/>
-                                <Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
-                                <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
-                                <Setter Property="BorderThickness" Value="{StaticResource PhoneBorderThickness}"/>
-                                <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiBold}"/>
-                                <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMediumLarge}"/>
-                                <Setter Property="Padding" Value="10,3,10,5"/>
-
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="ButtonBase">
-                                            <Grid Background="Transparent">
-                                                <VisualStateManager.VisualStateGroups>
-                                                    <VisualStateGroup x:Name="CommonStates">
-                                                        <VisualState x:Name="Normal"/>
-                                                        <VisualState x:Name="MouseOver"/>
-                                                        <VisualState x:Name="Disabled"/>
-
-                                                        <!-- the following visual state describes the behaviour you are observing -->
-                                                        <VisualState x:Name="Pressed">
-                                                            <Storyboard>
-                                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentContainer" Storyboard.TargetProperty="Projection">
-                                                                    <DiscreteObjectKeyFrame KeyTime="0">
-                                                                        <DiscreteObjectKeyFrame.Value>
-                                                                            <PlaneProjection RotationX="30" CenterOfRotationX="-0.2" />
-                                                                        </DiscreteObjectKeyFrame.Value>
-                                                                    </DiscreteObjectKeyFrame>
-                                                                </ObjectAnimationUsingKeyFrames>
-                                                            </Storyboard>
-                                                        </VisualState>
-                                                    </VisualStateGroup>
-                                                </VisualStateManager.VisualStateGroups>
-                                                <Border x:Name="ButtonBackground" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="0" Background="{TemplateBinding Background}" Margin="{StaticResource PhoneTouchTargetOverhang}" >
-                                                    <ContentControl x:Name="ContentContainer" Foreground="{TemplateBinding Foreground}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" Padding="{TemplateBinding Padding}" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}"/>
-                                                </Border>
-                                            </Grid>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </Button.Style>
                     </Button>
                     <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Content="Popular" 
                             Foreground="Black" BorderBrush="Black" Width="175" Margin="30,-8" 
