--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -27,13 +27,9 @@
             
         </Grid>
 
-        <Grid x:Name="ContentPanel" Margin="12,150,12,0">
+        <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Collapsed">
             <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
                      Margin="40,145,0,0" />
-            <CheckBox VerticalAlignment="Top" HorizontalAlignment="Center" 
-                      Margin="0,300,0,0" Content="Remember Password"
-                      Foreground="#FF555555" FontFamily="Segoe WP Bold"
-                      FontSize="24" x:Name="rempass"/>
             <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,235,0,0" />
             <TextBlock Text="Email" FontSize="36" Margin="0,105,0,0" Height="50" 
                        VerticalAlignment="Top" />
